Sat Aug 21 11:54:16 1999  George Lebl  <jirka@5z.com>

	* gnome-procbar.c: completely document the API

Sat Aug 21 11:31:07 1999  George Lebl  <jirka@5z.com>

	* gnome-dentry-edit.[ch]: there was a typo in the object, and
	  there was a call named gnome_dentry_get_dentry, which is the
	  wrong naming, it should be gnome_dentry_edit_get_dentry, so
	  I added the latter one and left in the first one for compatibility
	  but marked it as "not to be used". Also updated other parts of
	  the documentation

Sat Aug 21 11:18:47 1999  George Lebl  <jirka@5z.com>

	* gnome-dialog.c: the # is used to crosslink not the &, and
	  add a return type description to newv

Sat Aug 21 11:13:54 1999  George Lebl  <jirka@5z.com>

	* gnome-client.c: touched up docs for
	  gnome_client_get_global_config_prefix, still this file has
	  a bunch of things that need fixing in the docs

Sat Aug 21 11:06:57 1999  George Lebl  <jirka@5z.com>

	* gnome-app.c: fix so that documentation for gnome_app_add_dock_item
	  is actually read

1999-08-19  Federico Mena Quintero  <federico@redhat.com>

	* gnome-animator.c (free_all_frames): Don't free the mask, since
	it has already been freed by imlib.
	(gnome_animator_append_frames_from_imlib_at_size): Likewise.

	* gnome-canvas-image.c (free_pixmap_and_mask): Sigh.  Tell imlib
	to *only* free the pixmap, not the mask as well.  When you tell
	imlib to free a pixmap, it will also free its associated mask.  Is
	that broken, or what?

1999-08-19  Jonathan Blandford  <jrb@redhat.com>

	* gnome-druid.c (gnome_druid_size_allocate): Patch from damon to
	put the child in the right place.
	(gnome_druid_expose): Now I have achieved further enlightenment in
	the ways of writing a GtkContainer.
	(gnome_druid_draw): Thanks Owen/HP.  Further Container-hood.

1999-08-19  Havoc Pennington  <hp@pobox.com>

	* gnome-icon-entry.c (show_icon_selection): Patch from 
	David Meybohm <dm89754@ucf.edu> fixes a race condition